--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <body>
        <!-- nav -->
         <nav>
-            <a href="room2.html" >home</a>
+            <a href="home.html" >home</a>
             <a href="gallery.html">gallery</a> 
         </nav>
         <!-- band members contacts, links to instagrams  -->
