--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <body>
         <!-- nav bar  -->
         <nav>
-            <a href="room2.html" >home</a>
+            <a href="home.html" >home</a>
             <a href="contact.html">contact</a>
             </nav>
             <!-- videos/images from rehearsals -->
