--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         </nav>
         <!-- paragraph about who we are  -->
         <div class="txt-box">
-        <p></p>
+        <p>a bunch of text eventually</p>
         </div>
        
         
