--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <div class="txt-box">
         <p>howdy, this is my website for my solo black metal project.<br>
              The idea for this came to me a while ago but I
-            never really got around to it.<br>
+            never did.<br>
             Eventually ill write a song and put it into the gallery tab</p>
     </div>
 
