--- a/gallery.html
+++ b/gallery.html
@@ -15,14 +15,16 @@
             <a href="home.html" >home</a>
             <a href="contact.html">contact</a>
             </nav>
-            <!-- placeholders -->
+            <div class="txt-box-2">
+            <p> 
+                Until I write my own songs, here is some songs i take insperation from. 
+            </p>
+            </div>
             <div class="gallery">
                 <video class="bigBoy" width="320" height="315" controls autoplay muted>
                     <source src="VID20230626141723 - Trim.mp4" type="video/mp4">
                   </video>
-                <video height="560" width="315" controls autoplay muted>
-                    <source src="Snapchat-1482455283.mp4" type="video/mp4">
-                </video>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Q2e0yJbZrl0?si=wRTEEs8bvgSxr68o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <img src="Snapchat-1550776680 copy.jpg" height="560" width="315" alt="moosic"><img>
             
             </div>
