--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <h3>Alex: everything</h3>
         <list>
             <p>Email: alexw9687@gmail.com or alexander.winslade@sbhsstudent.school.nz</p>
-            <p>Instagram:<a href="https://www.instagram.com/marshmellow264531/" target="_blank">https://www.instagram.com/marshmellow264531/</a></p>
+            <p>Instagram:<a href="https://www.instagram.com/alex.winslade/#" target="_blank">https://www.instagram.com/marshmellow264531/</a></p>
 
 
       
