--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <p>howdy, this is my website for my solo black metal project.<br>
              The idea for this came to me a while ago but I
             never did.<br>
-            Eventually ill write a song and put it into the gallery tab</p>
+            Eventually i'll write a song and put it into the gallery tab</p>
     </div>
 
 
