--- a/home.html
+++ b/home.html
@@ -12,16 +12,26 @@
 <body>
     <!-- nav bar -->
     <nav>
+        <a href="home.html">home</a>
         <a href="gallery.html">gallery</a>
         <a href="contact.html">contact</a>
+
 
     </nav>
     <!-- paragraph about who we are  -->
     <div class="txt-box">
         <p>howdy, this is my website for my solo black metal project.<br>
-             The idea for this came to me a while ago but I
+            The idea for this came to me a while ago but I
             never did.<br>
             Eventually i'll write a song and put it into the gallery tab</p>
+    </div>
+
+    <div class="inspo">
+        <h1 class="title">My Inspirations</h1>
+        <iframe width="420" height="420" src="https://www.youtube.com/embed/Q2e0yJbZrl0?si=wRTEEs8bvgSxr68o"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
 
@@ -29,8 +39,26 @@
 </body>
 </head>
 
-<body>
 
-</body>
+<footer>
+    <div class="footer-div">
+        <h3>About Us</h3>
+        <p>I am an up and coming one man <br>
+            black metal band. I am hoping to <br>
+            potentially become one of the most<br>
+            prominent black metal bands in New Zealand.</p>
+    </div>
+    <div class="footer-div">
+        <h3>Name suggestions</h3>
+        <p>If you have any suggestions<br>
+            for the band name, send them<br>
+            through to me via my email<br>
+            alexw9687@gmail.com</p>
+    </div>
+    
+    
+
+
+</footer>
 
 </html>
