--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
         <nav>
             <a href="home.html" >home</a>
             <a href="gallery.html">gallery</a> 
+            <a href="contact.html">contact</a>
         </nav>
         <!-- band members contacts, links to instagrams  -->
         <div class="contact">
